--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ To create a thunder crack, press the "t" key.
 To create wind, press the "w" key.
 </div>
 <div>
-To increase the sound, press the "a" key.
+To increase the sound volume, press the "a" key.
 </div>
 <div>
 To decrease the sound volume, press the "d" key.
