--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <script src="sketch.js"></script>
 <center><a href="about.html">PROJECT DESCRIPTION</center></a>
 <center><h1>FINAL PROJECT</center></h1>
-<center><h1>Facing the Storm</center></h1>
-<h2>Directions for Generating the Storm</h2>
+<center><h1>Storm Symphony</center></h1>
+<center><img src="collage.jpg" alt="images of rain" class="900px; 300px"></center></img>
+<h2>Directions for Generating the Thunderstorm</h2>
 <h3>
 To start a downpour, press the "r" key. <div>
 To create a thunder crack, press the "t" key.
@@ -28,5 +29,4 @@ To decrease the sound volume, press the "d" key.
 To stop the downpour, press the "p" key.
 </div>
 </h3>
-<img src="collage.jpg" alt="images of rain" class="900px; 300px"></img>
 </body></html>
