--- a/about.html
+++ b/about.html
@@ -8,5 +8,5 @@
   <body>
   <center><a href="index.html">HOMEPAGE</center></a>
       <h1><center>Project Description</center></h1>
-  <h2>This project is meant to create storm sounds, some of which were original recordings.  It's an extremely personal piece since I had a phobia of storms for awhile.  I eventually grew out of the fear but I want to help others overcome similar phobias, especially ones which are related to storms.</h2>
-      </body></html>
+  <h2>This project is meant to create thunderstorm sounds, some of which were original recordings.  It's an extremely personal piece since I had a phobia of thunderstorms for awhile.  I eventually got past this fear, but I want to help other people overcome similar weather-related phobias.</h2>
+      </body>
