--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <center><a href="about.html">PROJECT DESCRIPTION</center></a>
 <center><h1>FINAL PROJECT</center></h1>
 <center><h1>Storm Symphony</center></h1>
-<center><img src="collage.jpg" alt="images of rain" class="900px; 300px"></center></img>
+<center><img src="thunderstorm.jpg" alt="image of lightning" class="576px; 576px"></center></img>
 <h2>Directions for Generating the Thunderstorm</h2>
 <h3>
 To start a downpour, press the "r" key. <div>
