--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@ To start a downpour, press the "r" key. <div>
 To create a thunder crack, press the "t" key.
 </div>
 <div>
+To create hail sounds, press the "h" key.
+</div>
+<div>
 To create wind, press the "w" key.
 </div>
 <div>
@@ -26,7 +29,7 @@ To increase the sound volume, press the "a" key.
 To decrease the sound volume, press the "d" key.
 </div>
 <div>
-To stop the downpour, press the "p" key.
+To stop the storm, press the "p" key.
 </div>
 </h3>
 </body></html>
