--- a/index.html
+++ b/index.html
@@ -1,35 +1,28 @@
 <!DOCTYPE html><html><head>
     <script src="p5.js"></script>
     <script src="p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <meta charset="utf-8">
 
   </head>
   <body>
     <script src="sketch.js"></script>
-<center><a href="about.html">PROJECT DESCRIPTION</center></a>
-<center><h1>FINAL PROJECT</center></h1>
-<center><h1>Storm Symphony</center></h1>
+<div class="project-description">
+    <div class="desc"><b>Project Description</b><br><p>This project is meant to create thunderstorm sounds, some of which were original recordings.  It's an extremely personal piece since I had a phobia of thunderstorms for awhile.  I eventually got past this fear, but I want to help other people overcome similar weather-related phobias.</br></p></div>
+</div>
+
+<h1><b>Sound Machine</b></h1>
+<h2><center>Storm Symphony</h2></center>
 <center><img src="thunderstorm.jpg" alt="image of lightning" class="576px; 576px"></center></img>
-<h2>Directions for Generating the Thunderstorm</h2>
-<h3>
-To start a downpour, press the "r" key. <div>
-To create a thunder crack, press the "t" key.
-</div>
-<div>
-To create hail sounds, press the "h" key.
-</div>
-<div>
-To create wind, press the "w" key.
-</div>
-<div>
-To increase the sound volume, press the "a" key.
-</div>
-<div>
-To decrease the sound volume, press the "d" key.
-</div>
-<div>
-To stop the storm, press the "p" key.
-</div>
-</h3>
-</body></html>
+<ul>
+<h3><center><b>Directions for Generating the Thunderstorm</b></center></h3>
+<li>To start a downpour, press the <b>R</b> key.</li>
+<li>To create a thunder crack, press the <b>T</b> key.</li>
+<li>To create hail sounds, press the <b>H</b> key.</li>
+<li>To create wind, press the <b>W</b> key.</li>
+<li>To increase the sound volume, press the <b>A</b> key.</li>
+<li>To decrease the sound volume, press the <b>D</b> key.</li>
+<li>To stop the storm, press the <b>P</b> key.</li>
+</ul>
+</body>
+</html>
