--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 </div>
 
 <h1><b>Sound Machine</b></h1>
-<h2><center>Storm Symphony</h2></center>
+<h2>Storm Symphony</h2>
 <center><img src="thunderstorm.jpg" alt="image of lightning" class="576px; 576px"></center></img>
 <ul>
-<h3><center><b>Directions for Generating the Thunderstorm</b></center></h3>
+<h3><b>Directions for Generating the Thunderstorm</b></h3>
 <li>To start a downpour, press the <b>R</b> key.</li>
 <li>To create a thunder crack, press the <b>T</b> key.</li>
 <li>To create hail sounds, press the <b>H</b> key.</li>
